--- a/your-code/pandas_1_concat-merge-join.ipynb
+++ b/your-code/pandas_1_concat-merge-join.ipynb
@@ -81,9 +81,36 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5\n",
+      "    D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "\n",
+    "df_merged1 = pd.concat([df1, df2], axis=0)\n",
+    "print(df_merged1)\n",
+    "\n",
+    "df_merged2 = pd.concat([df3, df4], axis=0)\n",
+    "print(df_merged2)\n"
    ]
   },
   {
@@ -101,9 +128,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A    B    C    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN\n",
+      "3   a3   b3   c3  NaN  NaN  NaN\n",
+      "4   a4   b4   c4  NaN  NaN  NaN\n",
+      "5   a5   b5   c5  NaN  NaN  NaN\n",
+      "0  NaN  NaN  NaN   d0   e0   f0\n",
+      "1  NaN  NaN  NaN   d1   e1   f1\n",
+      "2  NaN  NaN  NaN   d2   e2   f2\n",
+      "3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "df_combined = pd.concat([df1, df2, df3, df4], axis=0, sort=False)\n",
+    "print(df_combined)\n"
    ]
   },
   {
@@ -117,16 +165,37 @@
     "    * `df3` and `df4` also retain their original row indexes of 0-5 instead of continuing from the last index of `df2`. \n",
     "* `concat` creates `NaN` at places where values are missing.\n",
     "\n",
-    "Try also supplying `ignore_index=True` to `concat`. How is the output different?"
+    "Try also supplying `ignore_index=True` to `concat`. How is the output different?  it's the same out put "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A    B    C    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN\n",
+      "3   a3   b3   c3  NaN  NaN  NaN\n",
+      "4   a4   b4   c4  NaN  NaN  NaN\n",
+      "5   a5   b5   c5  NaN  NaN  NaN\n",
+      "0  NaN  NaN  NaN   d0   e0   f0\n",
+      "1  NaN  NaN  NaN   d1   e1   f1\n",
+      "2  NaN  NaN  NaN   d2   e2   f2\n",
+      "3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "df_combined = pd.concat([df1, df2, df3, df4], axis=0, sort=True)\n",
+    "print(df_combined)\n"
    ]
   },
   {
@@ -150,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +294,7 @@
        "2  i2  a2  b2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +364,7 @@
        "2  i3  c3  d3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,11 +389,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  idx    A    B    C    D\n",
+      "0  i0   a0   b0  NaN  NaN\n",
+      "1  i1   a1   b1   c1   d1\n",
+      "2  i2   a2   b2   c2   d2\n",
+      "3  i3  NaN  NaN   c3   d3\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "merged_df = pd.merge(left, right, on=\"idx\", how=\"outer\")\n",
+    "print(merged_df)"
    ]
   },
   {
@@ -364,17 +446,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D   E   F\n",
+      "0  a0  b0  c0  d0  e0  f0\n",
+      "1  a1  b1  c1  d1  e1  f1\n",
+      "2  a2  b2  c2  d2  e2  f2\n",
+      "3  a3  b3  c3  d3  e3  f3\n",
+      "4  a4  b4  c4  d4  e4  f4\n",
+      "5  a5  b5  c5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data for df1, df2, df3, df4 (assuming each df contains part of the table)\n",
+    "df1 = pd.DataFrame({'A': ['a0', 'a1', 'a2', 'a3', 'a4', 'a5'],\n",
+    "                    'B': ['b0', 'b1', 'b2', 'b3', 'b4', 'b5']})\n",
+    "\n",
+    "df2 = pd.DataFrame({'C': ['c0', 'c1', 'c2', 'c3', 'c4', 'c5'],\n",
+    "                    'D': ['d0', 'd1', 'd2', 'd3', 'd4', 'd5']})\n",
+    "\n",
+    "df3 = pd.DataFrame({'E': ['e0', 'e1', 'e2', 'e3', 'e4', 'e5'],\n",
+    "                    'F': ['f0', 'f1', 'f2', 'f3', 'f4', 'f5']})\n",
+    "\n",
+    "# Concatenating along columns (axis=1)\n",
+    "final_df = pd.concat([df1, df2, df3], axis=1)\n",
+    "\n",
+    "# Display final dataframe\n",
+    "print(final_df)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -388,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
